--- a/plugin.xml
+++ b/plugin.xml
@@ -13,7 +13,7 @@
 	<license>Apache 2.0</license>
 
 	<js-module src="www/PhoneCallListener.js" name="PhoneCallListener">
-		<clobbers target="at.oneminutedistraction.phonecalllistener" />
+		<clobbers target="PhoneCallListener" />
 	</js-module>
 
 	<engines>
