--- a/plugin.xml
+++ b/plugin.xml
@@ -41,6 +41,9 @@
 					<action android:name="android.intent.action.NEW_OUTGOING_CALL"/>
 				</intent-filter>
 			</receiver>
+			<activity android:name="at.oneminutedistraction.phonecalllistener.PhoneCallHandlerActivity" 
+					android:launchMode="singleInstance" />
+
 		</config-file>
 
 		<source-file src="src/android/at/oneminutedistraction/phonecalllistener/Constants.java" 
