--- a/plugin.xml
+++ b/plugin.xml
@@ -41,10 +41,8 @@
 					<action android:name="android.intent.action.NEW_OUTGOING_CALL"/>
 				</intent-filter>
 			</receiver>
-<!--
 			<activity android:name="at.oneminutedistraction.phonecalllistener.PhoneCallHandlerActivity" 
-					android:launchMode="singleTask" />
--->
+					android:theme="@style/Theme.Transparent" android:launchMode="singleTask" />
 
 		</config-file>
 
